Run syncDevDocs.ts

--- a/docs/api/qiskit/dev/qiskit.visualization.timeline_drawer.mdx
+++ b/docs/api/qiskit/dev/qiskit.visualization.timeline_drawer.mdx
@@ -10,7 +10,7 @@ python_api_name: qiskit.visualization.timeline_drawer
 
 # qiskit.visualization.timeline\_drawer
 
-<Function id="qiskit.visualization.timeline_drawer" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/visualization/timeline/interface.py#L31-L424" signature="qiskit.visualization.timeline_drawer(program, style=None, time_range=None, disable_bits=None, show_clbits=None, idle_wires=None, plot_barriers=None, show_delays=None, show_labels=True, plotter='mpl', axis=None, filename=None, *, show_idle=None, show_barriers=None)">
+<Function id="qiskit.visualization.timeline_drawer" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/visualization/timeline/interface.py#L33-L436" signature="qiskit.visualization.timeline_drawer(program, style=None, time_range=None, disable_bits=None, show_clbits=None, idle_wires=None, plot_barriers=None, show_delays=None, show_labels=True, plotter='mpl', axis=None, filename=None, target=None, *, show_idle=None, show_barriers=None)">
   Generate visualization data for scheduled circuit programs.
 
   <Admonition title="Deprecated since version 1.1.0_pending" type="danger">
@@ -56,6 +56,8 @@ python_api_name: qiskit.visualization.timeline_drawer
   *   **axis** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)") *| None*) – Arbitrary object passed to the plotter. If this object is provided, the plotters uses given axis instead of internally initializing a figure object. This object format depends on the plotter. See plotters section for details.
 
   *   **filename** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – If provided the output image is dumped into a file under the filename.
+
+  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.target.Target") *| None*) – The target for the backend the timeline is being generated for.
 
   *   **show\_idle** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)") *| None*) – DEPRECATED.
 
