--- a/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.RuntimeJob.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.RuntimeJob.mdx
@@ -259,7 +259,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeJob
   ### interim\_results
 
   <Function id="qiskit_ibm_runtime.RuntimeJob.interim_results" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/runtime_job.py#L399-L418" signature="interim_results(decoder=None)">
-    Return the interim results of the job.
+    (DEPRECATED) Return the interim results of the job.
 
     **Parameters**
 
@@ -444,7 +444,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeJob
   ### stream\_results
 
   <Function id="qiskit_ibm_runtime.RuntimeJob.stream_results" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/runtime_job.py#L368-L397" signature="stream_results(callback, decoder=None)">
-    Start streaming job results.
+    (DEPRECATED) Start streaming job results.
 
     **Parameters**
 
