--- a/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.RuntimeJobV2.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.RuntimeJobV2.mdx
@@ -237,7 +237,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeJobV2
   ### interim\_results
 
   <Function id="qiskit_ibm_runtime.RuntimeJobV2.interim_results" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/runtime_job_v2.py#L306-L325" signature="interim_results(decoder=None)">
-    Return the interim results of the job.
+    (DEPRECATED) Return the interim results of the job.
 
     **Parameters**
 
@@ -380,7 +380,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeJobV2
   ### stream\_results
 
   <Function id="qiskit_ibm_runtime.RuntimeJobV2.stream_results" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/runtime_job_v2.py#L275-L304" signature="stream_results(callback, decoder=None)">
-    Start streaming job results.
+    (DEPRECATED) Start streaming job results.
 
     **Parameters**
 
