--- a/docs/api/qiskit/dev/qiskit.quantum_info.Pauli.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.Pauli.mdx
@@ -266,7 +266,7 @@ $$
   ### conjugate
 
   <Function id="qiskit.quantum_info.Pauli.conjugate" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/quantum_info/operators/symplectic/pauli.py#L518-L519" signature="conjugate()">
-    Return the conjugate of each Pauli in the list.
+    Return the complex conjugate of the Pauli with respect to the Z basis.
   </Function>
 
   ### copy
