--- a/docs/api/qiskit/dev/qiskit.transpiler.passes.Decompose.mdx
+++ b/docs/api/qiskit/dev/qiskit.transpiler.passes.Decompose.mdx
@@ -8,16 +8,15 @@ python_api_name: qiskit.transpiler.passes.Decompose
 
 # Decompose
 
-<Class id="qiskit.transpiler.passes.Decompose" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/basis/decompose.py#L23-L98" signature="qiskit.transpiler.passes.Decompose(*args, **kwargs)" modifiers="class">
+<Class id="qiskit.transpiler.passes.Decompose" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/basis/decompose.py#L30-L122" signature="qiskit.transpiler.passes.Decompose(*args, **kwargs)" modifiers="class">
   Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")
 
   Expand a gate in a circuit using its decomposition rules.
 
-  Decompose initializer.
-
   **Parameters**
 
-  **gates\_to\_decompose** – optional subset of gates to be decomposed, identified by gate label, name or type. Defaults to all gates.
+  *   **gates\_to\_decompose** – optional subset of gates to be decomposed, identified by gate label, name or type. Defaults to all gates.
+  *   **apply\_synthesis** – If `True`, run [`HighLevelSynthesis`](qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.HighLevelSynthesis") to synthesize operations that do not have a definition attached.
 
   ## Attributes
 
@@ -71,7 +70,7 @@ python_api_name: qiskit.transpiler.passes.Decompose
 
   ### run
 
-  <Function id="qiskit.transpiler.passes.Decompose.run" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/basis/decompose.py#L39-L67" signature="run(dag)">
+  <Function id="qiskit.transpiler.passes.Decompose.run" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/basis/decompose.py#L51-L92" signature="run(dag)">
     Run the Decompose pass on dag.
 
     **Parameters**
