--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "![Visualization of the error suppression pipeline](/images/guides/qctrl-performance-management/error_suppression.svg)\n",
     "\n",
-    "The function offers two primitives, Sampler and Estimator, and the inputs and outputs of both follow the implemented spec for [Qiskit Runtime V2 primitives](../guides/primitive-input-output). See the Inputs and Outputs sections for detailed interface information."
+    "The function offers two primitives, Sampler and Estimator, and the inputs and outputs of both follow the implemented spec for [Qiskit Runtime V2 primitives](../guides/primitive-input-output), which provides detailed interface information."
    ]
   },
   {
