Fix notebook lint

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -330,7 +330,7 @@
     "- One or more observables that specify the expectation values to estimate, in any of the formats denoted in the list \"Supported observables formats\".\n",
     "- (Optional) A collection of parameter values to bind the circuit against, which follow the same [array broadcasting rules](./primitive-input-output#broadcasting-rules) as the `QiskitRuntime` primitives.\n",
     "- (Optional) A target precision for expectation values to estimate.\n",
-    "- (Optional) A real number representing the precision, or a dictionary of run options containing the shot count. For example: `{\"shots\": <int>}`. \n",
+    "- (Optional) A real number representing the precision, or a dictionary of run options containing the shot count. For example: `{\"shots\": <int>}`.\n",
     "\n",
     "**Supported observables formats:**\n",
     "- Any one of the `ObservablesArrayLike` formats, such as `Pauli`, `SparsePauliOp`, `PauliList`, or `str`\n",
@@ -343,17 +343,17 @@
     "\n",
     "**Supported backends:**\n",
     "The following list of backends are currently supported. If your device is not listed, [reach out to Q-CTRL](https://form.typeform.com/to/iuujEAEI?typeform-source=q-ctrl.com) to add support.\n",
-    "- ibm_brisbane  \n",
-    "- ibm_brussels  \n",
-    "- ibm_cleveland  \n",
-    "- ibm_fez  \n",
-    "- ibm_kawasaki  \n",
-    "- ibm_kyiv  \n",
-    "- ibm_nazca  \n",
-    "- ibm_quebec  \n",
-    "- ibm_rensselaer  \n",
-    "- ibm_sherbrooke  \n",
-    "- ibm_strasbourg  \n",
+    "- ibm_brisbane\n",
+    "- ibm_brussels\n",
+    "- ibm_cleveland\n",
+    "- ibm_fez\n",
+    "- ibm_kawasaki\n",
+    "- ibm_kyiv\n",
+    "- ibm_nazca\n",
+    "- ibm_quebec\n",
+    "- ibm_rensselaer\n",
+    "- ibm_sherbrooke\n",
+    "- ibm_strasbourg\n",
     "- ibm_torino\n",
     "\n",
     "**Options:**\n",
@@ -547,23 +547,23 @@
     "    if not top_100:\n",
     "        print(\"No bitstrings found in the input dictionary.\")\n",
     "        return\n",
-    "    \n",
+    "\n",
     "    # Unzip the bitstrings and their counts\n",
     "    bitstrings, counts = zip(*top_100)\n",
-    "    \n",
+    "\n",
     "    # Assign colors: purple if the bitstring matches hidden_bitstring, otherwise gray\n",
     "    colors = ['#680CE9' if bit == hidden_bitstring else 'gray' for bit in bitstrings]\n",
-    "    \n",
+    "\n",
     "    # Create the bar plot\n",
     "    plt.figure(figsize=(15, 8))\n",
     "    plt.bar(range(len(bitstrings)), counts, tick_label=bitstrings, color=colors)\n",
-    "    \n",
+    "\n",
     "    # Rotate the bitstrings for better readability\n",
     "    plt.xticks(rotation=90, fontsize=8)\n",
     "    plt.xlabel('Bitstrings')\n",
     "    plt.ylabel('Counts')\n",
     "    plt.title('Top 100 Bitstrings by Counts')\n",
-    "    \n",
+    "\n",
     "    # Show the plot\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
@@ -620,17 +620,17 @@
     "\n",
     "**Supported backends:**\n",
     "The following list of backends are currently supported. If your device is not listed, [reach out to Q-CTRL](https://form.typeform.com/to/iuujEAEI?typeform-source=q-ctrl.com) to add support.\n",
-    "- ibm_brisbane  \n",
-    "- ibm_brussels  \n",
-    "- ibm_cleveland  \n",
-    "- ibm_fez  \n",
-    "- ibm_kawasaki  \n",
-    "- ibm_kyiv  \n",
-    "- ibm_nazca  \n",
-    "- ibm_quebec  \n",
-    "- ibm_rensselaer  \n",
-    "- ibm_sherbrooke  \n",
-    "- ibm_strasbourg  \n",
+    "- ibm_brisbane\n",
+    "- ibm_brussels\n",
+    "- ibm_cleveland\n",
+    "- ibm_fez\n",
+    "- ibm_kawasaki\n",
+    "- ibm_kyiv\n",
+    "- ibm_nazca\n",
+    "- ibm_quebec\n",
+    "- ibm_rensselaer\n",
+    "- ibm_sherbrooke\n",
+    "- ibm_strasbourg\n",
     "- ibm_torino\n",
     "\n",
     "**Options:**\n",
@@ -642,7 +642,7 @@
     "### Sampler outputs\n",
     "| Name   | Type                                   | Description                                                                               | Example                         |\n",
     "|--------|----------------------------------------|-------------------------------------------------------------------------------------------|---------------------------------|\n",
-    "| N/A | `PrimitiveResult`  | The [`PrimitiveResult`](/api/qiskit/qiskit.primitives.PrimitiveResult) corresponding to the list of input PUBs | `PrimitiveResult([PubResult(data=DataBin(c=BitArray(<shape=(), num_shots=2048, num_bits=35>)), metadata={'shots': 2048})], metadata={})` |\n"
+    "| N/A | `PrimitiveResult`  | The [`PrimitiveResult`](/api/qiskit/qiskit.primitives.PrimitiveResult) corresponding to the list of input PUBs | `PrimitiveResult([PubResult(data=DataBin(c=BitArray(<shape=(), num_shots=2048, num_bits=35>)), metadata={'shots': 2048})], metadata={})` |"
    ]
   },
   {
@@ -687,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3"
   },
   "title": "Performance Management - A Qiskit Function by Q-CTRL Fire Opal"
  },
