Correct net effect of CNOT gates with correct bit ordering

--- a/docs/api/qiskit/qiskit.circuit.library.CXGate.mdx
+++ b/docs/api/qiskit/qiskit.circuit.library.CXGate.mdx
@@ -62,9 +62,7 @@ $$
   In the computational basis, this gate flips the target qubit if the control qubit is in the $|1\rangle$ state. In this sense it is similar to a classical XOR gate.
 
 $$
-`|a, b\rangle \rightarrow |a, a \oplus b\rangle`
-
-
+|a, b\rangle \rightarrow |a\oplus b, b\rangle
 $$
 
   Create new CX gate.
