Removed dependencies==qiskit-aer==0.14.1 from serverless

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "## Deploy to IBM Quantum Platform\n",
     "\n",
-    "The previous section created a program to be run remotely. The code cells in this section upload that program to Qiskit Serverless.",
+    "The previous section created a program to be run remotely. The code cells in this section upload that program to Qiskit Serverless.\n",
     "\n",
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program.\n",
     "\n",
@@ -239,7 +239,6 @@
     "    title=\"transpile_remote_serverless\",\n",
     "    entrypoint=\"transpile_remote.py\",\n",
     "    working_dir=\"./source_files/\",\n",
-    "    dependencies=[\"qiskit-aer==0.14.1\"],\n",
     ")"
    ]
   },
