--- a/docs/api/qiskit-ibm-runtime/index.mdx
+++ b/docs/api/qiskit-ibm-runtime/index.mdx
@@ -13,5 +13,6 @@ description: API documentation for the qiskit-ibm-runtime client
 *   [Transpiler scheduling passes (`qiskit_ibm_runtime.transpiler.passes.scheduling`)](qiskit_ibm_runtime.transpiler.passes.scheduling)
 *   [Fake Provider (`qiskit_ibm_runtime.fake_provider`)](fake_provider)
 *   [Execution Spans (`qiskit_ibm_runtime.execution_span`)](execution_span)
+*   [Debugging tools (`qiskit_ibm_runtime.debug_tools`)](debug_tools)
 *   [Visualization (`qiskit_ibm_runtime.visualization`)](visualization)
 
