--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -305,6 +305,8 @@
       "The result of the submitted job had 1 PUB\n",
       "The expectation values measured from this PUB are: \n",
       "[0.98, 1.01]\n",
+      "The error-bar values are: \n",
+      "[0.028, 0.015]\n",
       "And the associated metadata contains the original observables, making the results easier to interpret: \n",
       "{\n",
       "    'observables': [\n",
@@ -324,6 +326,7 @@
    "source": [
     "print(f'The result of the submitted job had {len(result)} PUB')\n",
     "print(f'The expectation values measured from this PUB are: \\n{result[0].data.evs}')\n",
+    "print(f'The error-bar values are: \\n{result[0].data.stds}')\n",
     "print(f'And the associated metadata contains the original observables, making the results easier to interpret: \\n{result[0].metadata}')"
    ]
   },
