--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -197,7 +197,7 @@ Qiskit Code Assistant guides:
 
 Updates to the infrastructure and design of the docs include the following:
 
-- We fixed GitHub source code links for functions using decorators - thanks to the external contributor for opening an issue for this!
+- We fixed GitHub source code links for functions using decorators - thanks to the external contributor who opened an issue for this!
 - When you click on "Go to the latest version" in the API reference docs, you arrive at the equivalent page in the latest version - and if the page does not exist in the new version, you land on the index page. We also fixed broken links in historical api refs
 - We improved the design and color of the warning banner for when you access outdated API pages to make it easier to realize that newer docs are available - and the banner persists as you scroll down the page
 - Source code links and release notes have been added to the [Qiskit Transpiler Service Client API docs](/api/qiskit-ibm-transpiler)
