--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -200,7 +200,7 @@ Updates to the infrastructure and design of the docs include the following:
 - We fixed GitHub source code links for functions using decorators - thanks to the external contributor who opened an issue for this!
 - When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
 - We fixed several broken links in historical API docs.
-- We improved the design and color of the warning banner for when you access outdated API pages to make it easier to realize that newer docs are available - and the banner persists as you scroll down the page
+- We improved the design and color of the warning banner for when you access outdated API pages to make it easier to realize that newer docs are available. The banner also now persists as you scroll down the page.
 - Source code links and release notes have been added to the [Qiskit Transpiler Service Client API docs](/api/qiskit-ibm-transpiler)
 - Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program)
 - Tips on how to use the Qiskit Code Assistant now appear throughout the guides
