removed max_execution_time from example

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -175,10 +175,8 @@
     "instance = \"<IQP_HUB/IQP_GROUP/IQP_PROJECT>\"\n",
     "\n",
     "pub = (qc, [observable])\n",
-    "options = {\n",
-    "    \"max_execution_time\": 60,\n",
-    "}\n",
-    "job = tem.run(pubs=[pub], instance=instance, backend_name=backend_name, options=options)"
+    "\n",
+    "job = tem.run(pubs=[pub], instance=instance, backend_name=backend_name)"
    ]
   },
   {
