make paths safer  (tweak to latest updates pg)

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -65,7 +65,7 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 ### Qiskit Functions Catalog Service Client v0.1.0
 
-Introducing the Qiskit Functions preview, for IBM Quantum Premium Plan users. To get started, `pip install qiskit-ibm-catalog`, and explore the [Qiskit Functions documentation](./functions). With the Qiskit Functions Catalog client, you can submit workloads to abstracted services designed to accelerate your research - sign in with your existing IBM Quantum Platform credentials.
+Introducing the Qiskit Functions preview, for IBM Quantum Premium Plan users. To get started, `pip install qiskit-ibm-catalog`, and explore the [Qiskit Functions documentation](/guides/functions). With the Qiskit Functions Catalog client, you can submit workloads to abstracted services designed to accelerate your research - sign in with your existing IBM Quantum Platform credentials.
 
 Premium Plan users can get started right away with the IBM&reg; Circuit function, or request access to circuit or application functions from our partners.
 
@@ -123,7 +123,7 @@ Users can purchase licenses for the following functions contributed by our partn
 - QunaSys is releasing a chemistry application function comprising three algorithms meant to solve the ground state energy estimation (GSEE) problem.
 - Q-CTRL is also releasing an optimization solver with which users can pass a graph or an objective, and receive solution costs.
 
-To get started, explore the [Qiskit Functions documentation](./functions).
+To get started, explore the [Qiskit Functions documentation](/guides/functions).
 
 
 ## IBM Quantum blog: A closer look at Qiskit Code Assistant
@@ -168,11 +168,11 @@ New pages include documentation for [Qiskit Functions](/guides/functions), [Qisk
 
 - Clarity around how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
 
-- A new [FAQ](../faq) page
+- A new [FAQ](/faq) page
 
-- Improvements to the [Support](../support) page
+- Improvements to the [Support](/support) page
 
-- Some error codes now link out to relevant documentation ([example](../errors#8055))
+- Some error codes now link out to relevant documentation ([example](/errors#8055))
 
 - Information on [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
 
