added default_precision option in the example

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -175,8 +175,9 @@
     "instance = \"<IQP_HUB/IQP_GROUP/IQP_PROJECT>\"\n",
     "\n",
     "pub = (qc, [observable])\n",
+    "options = {\"default_precision\": 0.02}\n",
     "\n",
-    "job = tem.run(pubs=[pub], instance=instance, backend_name=backend_name)"
+    "job = tem.run(pubs=[pub], instance=instance, backend_name=backend_name, options = options)"
    ]
   },
   {
