make paths safer  (tweak to latest updates pg) (#2171)

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -65,7 +65,7 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 ### Qiskit Functions Catalog Service Client v0.1.0
 
-Introducing the Qiskit Functions preview, for IBM Quantum Premium Plan users. To get started, `pip install qiskit-ibm-catalog`, and explore the [Qiskit Functions documentation](./functions). With the Qiskit Functions Catalog client, you can submit workloads to abstracted services designed to accelerate your research - sign in with your existing IBM Quantum Platform credentials.
+Introducing the Qiskit Functions preview, for IBM Quantum Premium Plan users. To get started, `pip install qiskit-ibm-catalog`, and explore the [Qiskit Functions documentation](/guides/functions). With the Qiskit Functions Catalog client, you can submit workloads to abstracted services designed to accelerate your research - sign in with your existing IBM Quantum Platform credentials.
 
 Premium Plan users can get started right away with the IBM&reg; Circuit function, or request access to circuit or application functions from our partners.
 
@@ -123,7 +123,7 @@ Users can purchase licenses for the following functions contributed by our partn
 - QunaSys is releasing a chemistry application function comprising three algorithms meant to solve the ground state energy estimation (GSEE) problem.
 - Q-CTRL is also releasing an optimization solver with which users can pass a graph or an objective, and receive solution costs.
 
-To get started, explore the [Qiskit Functions documentation](./functions).
+To get started, explore the [Qiskit Functions documentation](/guides/functions).
 
 
 ## IBM Quantum blog: A closer look at Qiskit Code Assistant
@@ -148,11 +148,10 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
 **New pages**
 
-New pages include documentation for [Qiskit Functions](/guides/functions), [Qiskit addons](/guides/addons), and [Qiskit Code Assistant](/guides/qiskit-code-assistant), as well as a guide on [job limits](/guides/job-limits). 
-
+New pages include documentation for [Qiskit Functions](/guides/functions), [Qiskit addons](/guides/addons), and [Qiskit Code Assistant](/guides/qiskit-code-assistant), as well as a guide about [job limits](/guides/job-limits). 
 
 - Qiskit Functions [Introduction](/guides/functions)
-- [IBM Circuit function](/guides/ibm-circuit-function)
+- [IBM&reg; Circuit function](/guides/ibm-circuit-function)
 - [Algorithmiq TEM function](/guides/algorithmiq-tem)
 - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
 - [Qedma QESEM](/guides/qedma-qesem)
@@ -164,36 +163,35 @@ New pages include documentation for [Qiskit Functions](/guides/functions), [Qisk
 
 **Content additions and improvements**
 
-- Added content to the [Execution modes](/guides/execution-modes) documentation guides and improved explanatory content in the Introduction to primitives](/guides/primitives) page
+- Added content to the [Execution modes](/guides/execution-modes) guides and improved explanatory content in the [Introduction to primitives](/guides/primitives) page
 
-- Clarity around how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
+- Clarified how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
 
-- A new [FAQ](../faq) page
+- A new [FAQ](/faq) page
 
-- Improvements to the [Support](../support) page
+- Improvements to the [Support](/support) page
 
-- Some error codes now link out to relevant documentation ([example](../errors#8055))
+- Some error codes now link out to relevant documentation ([example](/errors#8055))
 
-- Information on [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
+- Information about [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
 
-- Copyediting and typo fixes across the docs, including bugs reported by open-source contributors - thank you!
+- Copyediting and typo fixes across the documentation, including bugs reported by open-source contributors - thank you!
 
-**New API reference docs**
+**New API reference documentation**
 
 - [qiskit-ibm-runtime 0.29-0.31](/api/qiskit-ibm-runtime/release-notes)
 - [qiskit-ibm-transpiler 0.7](/api/qiskit-ibm-transpiler/release-notes)
 
-
 ### User experience improvements
 
-Updates to the infrastructure and design of the docs include the following:
+Updates to the infrastructure and design of the documentation include the following:
 
 - We fixed GitHub source code links for functions using decorators - thanks to the open-source contributor who opened an issue for this!
 - When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
-- We improved the design and color of the warning banner for when you access outdated API pages to make it easier to realize that newer docs are available. The banner persists as you scroll down the page.
-- Source code links and release notes have been added to the [Qiskit Transpiler Service Client API docs](/api/qiskit-ibm-transpiler).
+- We improved the design and color of the warning banner for when you access outdated API pages to make it more obvious that newer docs are available. The banner persists as you scroll down the page.
+- Source code links and release notes have been added to the [Qiskit Transpiler Service Client API documentation](/api/qiskit-ibm-transpiler).
 - Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program).
-- Tips on how to use the Qiskit Code Assistant now appear throughout the guides.
+- Tips to use the Qiskit Code Assistant now appear throughout the guides.
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
