Fix syntax in CodeAssistantAdmonition

--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -452,7 +452,7 @@
     "  tagLine=\"Can't remember the name of the plotting function you need? Try asking Qiskit Code Assistant.\"\n",
     "  prompts={[\n",
     "    \"# Plot psi on a Bloch sphere\",\n",
-    "    \"# Plot a qsphere of psi with title 'Psi'\",\n",
+    "    \"# Plot a qsphere of psi with title 'Psi'\"\n",
     "  ]}\n",
     "/>"
    ]
