--- a/docs/guides/specify-observables-pauli.ipynb
+++ b/docs/guides/specify-observables-pauli.ipynb
@@ -95,7 +95,7 @@
     "O = \\frac{1}{n} \\sum_{i=1} Z_i\n",
     "$$\n",
     "\n",
-    "For observables that are not given in terms of Pauli operators but in a matrix for, we first have to reformulate them\n",
+    "For observables that are not given in terms of Pauli operators but in a matrix form, we first have to reformulate them\n",
     "in the Pauli basis in order to evaluate them on a quantum computer.\n",
     "We are always able to find such a representation as the Pauli matrices form a basis for the Hermitian $2^n \\times 2^n$ matrices.\n",
     "We expand the observable $O$ as\n",
