--- a/docs/guides/architecture-workload-isolation.mdx
+++ b/docs/guides/architecture-workload-isolation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Learning about Qiskit Runtime architecture and workload isolation
-description: Learning about Qiskit Runtime architecture and workload isolation
+description: Understand workload visibility between users and how to restrict access to service instances.
 
 ---
 
@@ -8,7 +8,7 @@ description: Learning about Qiskit Runtime architecture and workload isolation
 
 Qiskit Runtime jobs run in individual containers in an internal Kubernetes cluster to isolate jobs from any other activities of other users. Jobs are not shared or visible between service instances. However, all users that can access a service instance can see that instance’s jobs, or submit jobs the account owner might be charged for.
 
-## Restricting Access to service instances
+## Restricting access to service instances
 
 With Qiskit Runtime, you can create service instances that are IAM-managed resources. Accordingly, IAM-based access control can be used for these service instances.
 User access to Qiskit Runtime service instances can be configured through different mechanisms:
