--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -57,10 +57,9 @@
     "from qiskit_ibm_runtime import (\n",
     "    EstimatorV2 as Estimator,\n",
     "    SamplerV2 as Sampler,\n",
-    "    QiskitRuntimeService,\n",
     ")\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit.quantum_info import Pauli, SparsePauliOp\n",
+    "from qiskit.quantum_info import SparsePauliOp\n",
     "import numpy as np\n",
     "\n",
     "# Instantiate runtime service and get\n",
@@ -351,7 +350,7 @@
     "print(f'The result of the submitted job had {len(result)} PUB and has a value:\\n {result}\\n')\n",
     "print(f'The associated PubResult of this job has the following DataBins:\\n {result[0].data}\\n')\n",
     "print(f'And this DataBin has attributes: {result[0].data.keys()}')\n",
-    "print(f'Recall that this shape is due to our array of parameter binding sets having shape (100,), combined with \\n\\\n",
+    "print('Recall that this shape is due to our array of parameter binding sets having shape (100,), combined with \\n\\\n",
     "  our array of observables having shape (3, 1), where 2 is the number of parameters in the circuit.\\n')\n",
     "print(f'The expectation values measured from this PUB are: \\n{result[0].data.evs}')"
    ]
@@ -482,11 +481,11 @@
    ],
    "source": [
     "# Print out the results metadata\n",
-    "print(f'The metadata of the PrimitiveResult is:')\n",
+    "print('The metadata of the PrimitiveResult is:')\n",
     "for key, val in result.metadata.items():\n",
     "    print(f\"'{key}' : {val},\")\n",
     "\n",
-    "print(f'\\nThe metadata of the PubResult result is:')\n",
+    "print('\\nThe metadata of the PubResult result is:')\n",
     "for key, val in result[0].metadata.items():\n",
     "    print(f\"'{key}' : {val},\")"
    ]
